# exercises

./: .gitignore  README.md
adventofcode2021/: Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day1a.java  Day1b.java  Day2Command.java  Day2a.java  Day2b.java  Day3a.java  Day3b.java  Day4Board.java  Day4a.java  Day4b.java  Day5.java  Day6.java  Day7a.java  Day7b.java  Day8.java  Day9.java  DayX.java  Exercise.java  Exercise2.java  Main.java  Point.java  README.md
adventofcode2022/: README.md  input.txt
adventofcode2022/app/: build.gradle.kts
adventofcode2023/: build.gradle.kts
adventofcode2024/: .bazelproject  .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  package-lock.json
adventofcode2024/src/main/kotlin/com/knottysoftware/exercises/adventofcode/: BUILD  InputDownloader.kt  Runner.kt
adventofcode2024/src/main/kotlin/com/knottysoftware/exercises/adventofcode/common/: BUILD  Grid.kt  Point.kt  SearchQueue.kt
adventofcode2024/src/main/kotlin/com/knottysoftware/exercises/adventofcode/runner/: BUILD  InputDownloader.kt  Runner.kt
adventofcode2024/src/main/kotlin/com/knottysoftware/exercises/adventofcode2024/: App.kt  BUILD  Day0.kt  Day1.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day17.kt  Day18.kt  Day2.kt  Day20.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt  Day9.kt
adventofcode2024/src/test/kotlin/com/knottysoftware/exercises/adventofcode2024/: BUILD  InputsTest.kt  SamplesTest.kt
adventofcode2024/tools/format/: BUILD
adventofcode2025/: Cargo.toml  README.md
adventofcode2025/src/: lib.rs  (+3 more)
(+73 files in other folders)
